Removed padding from card as recipe cards were not fitting correctly

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,10 +75,6 @@ p {
   font-size: 1.6rem;
 }
 
-.card {
-  padding: 1rem;
-}
-
 .card-panel {
   margin: 0;
 }
